# orquestra

./: README.md  pyproject.toml
examples/: simple_workflow.yaml
orquestra/agents/: anthropic.py  base.py  openai.py
orquestra/cli/: main.py
orquestra/core/: __init__.py  orchestrator.py  scheduler.py  templating.py
orquestra/models/: __init__.py  primitives.py
orquestra/parsers/: __init__.py  yaml_parser.py
tests/: test_models.py  test_orchestrator.py  test_parsers.py  test_scheduler.py  test_templating.py
