[project]
name = "orquestra"
version = "0.1.0"
description = "A Kubernetes-like framework for orchestrating AI agents."
authors = [
    {name = "Orquestra",email = "zhuweijie16@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
