[project]
name = "orquestra"
version = "0.1.0"
description = "A Kubernetes-like framework for orchestrating AI agents."
authors = [
    {name = "Orquestra",email = "zhuweijie16@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
python = "^3.12"
dependencies = [
    "pydantic[email] (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.1"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
